[tool.poetry]
name = "pytorch-mobilenet-v2"
version = "0.1.0"
description = ""
authors = ["Ji Lin"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
isort = "<5"
black = "^19.10b0"
mypy = "^0.782"
typer = "^0.3.0"
Pillow = "^7.2.0"
torchvision = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
